--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: 'CITRA'
 description: 'official site coming soon'
 
 # Images
-avatar: 'avatar.jpg'
+avatar: 'citra_logo.jpg'
 background: 'background.jpg'
 favicon: 'favicon.ico'
 
@@ -18,7 +18,7 @@ facebook: 'myfacebook'
 instagram: 'myinsta'
 #pinterest: 'mypinterest'
 #youtube: 'myyoutube'
-#ithub-user: 'mygithub'
+#buiithub-user: 'mygithub'
 #gitlab-user: ''
 #codepen: ''
 #steam: ''
