--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ favicon: 'favicon.ico'
 
 # Online profiles
 #dribbble: 'mydribbble'
-facebook: 'myfacebook'
-#twitter: 'mytwitter'
+facebook: 'citramalaysis'
+twitter: 'citramalaysis'
 #linkedin: 'mylinkedin'
-instagram: 'myinsta'
+instagram: 'citra_traditional.textiles'
 #pinterest: 'mypinterest'
 #youtube: 'myyoutube'
 #buiithub-user: 'mygithub'
@@ -32,7 +32,7 @@ instagram: 'myinsta'
 #weibo: 'myweibo'
 #vk: 'myvk'
 #blog_url: 'myblog.blog.com'
-email: 'hello@example.com'
+email: 'citra.tekstil.malaysia@gmail.com'
 #messenger: 'myfbchat'
 
 social-links-order: [github-user, facebook, twitter, instagram, tumblr, pinterest, linkedin, youtube, vk, weibo, dribbble, messenger, blog_url, email]
@@ -62,11 +62,11 @@ plugins:
 #     - **optional**
 social-links:
   - name: facebook
-    url-pattern: facebook.com/__USERNAME__
+    url-pattern: facebook.com/citramalaysis
     icon-class: fab fa-2x fa-facebook-f
 
   - name: twitter
-    url-pattern: twitter.com/__USERNAME__
+    url-pattern: twitter.com/citramalaysis
 
   - name: linkedin
     url-pattern: linkedin.com/in/__USERNAME__
@@ -81,7 +81,7 @@ social-links:
     url-pattern: weibo.com/__USERNAME__
 
   - name: instagram
-    url-pattern: instagram.com/__USERNAME__
+    url-pattern: instagram.com/citra_traditional.textiles
 
   - name: flickr
     url-pattern: flickr.com/__USERNAME__
@@ -156,5 +156,5 @@ social-links:
 
   - name: email
     url-scheme: 'mailto:'
-    url-pattern: '__USERNAME__'
+    url-pattern: 'citra.tekstil.malaysia@gmail.com'
     icon-class: fas fa-2x fa-envelope
