--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ favicon: 'favicon.ico'
 # Online profiles
 #dribbble: 'mydribbble'
 facebook: 'citramalaysis'
-twitter: 'citramalaysis'
+#twitter: 'citramalaysis'
 #linkedin: 'mylinkedin'
 instagram: 'citra_traditional.textiles'
 #pinterest: 'mypinterest'
